<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="400dp"
    android:background="@drawable/_17407_illustrazione_di_premio_trofeo_coppa_del_vincitore_su_uno_sfondo_a_strisce_blu_con_luce_vettoriale"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/felicitaciones"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adivinaste_la_palabra"
            android:textSize="35sp"
            android:layout_marginTop="90dp"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/playAgain"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/green"
            android:layout_marginTop="20dp"
            android:text="@string/jugar_de_nuevo"/>

        <Button
            android:id="@+id/exit"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/red"
            android:text="@string/salir"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>