<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="400dp"
    android:background="@drawable/descarga"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/seleccione_una_dificultad"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_facil"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:backgroundTint="#9E9E9E"
            android:text="@string/facil_las_palabras_son_de_5_letras"
            android:textAlignment="center"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_intermedio"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#9E9E9E"
            android:text="@string/intermedio_las_palabras_son_de_7_letras"
            android:textAlignment="center"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_dificil"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#9E9E9E"
            android:text="@string/dificil_las_palabras_son_de_9_letras"
            android:textAlignment="center"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_dialog_ok"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:backgroundTint="#3F51B5"
            android:text="aceptar"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>